feat: Add endpoint to assign quizzes to room by topics
