# app/app.py
@@ -6,6 +6,7 @@ from flask_restx import Api
 from app.config.cors import CORS_ALLOWED_ORIGIN
 from app.config.mongodb import mongo_config
 from app.routes.quiz import QuizRoutes
+from app.routes.room_quiz import RoomQuizRoutes
 from app.routes.room_user import RoomUserRoutes
 from app.routes.swagger import swagger
 from app.routes.room import RoomRoutes
@@ -22,6 +23,7 @@ def create_app():
     app.register_blueprint(swagger, url_prefix='/swagger')
     api.add_resource(RoomRoutes, '/api/rooms/', '/api/rooms/<string:room_id>')
     api.add_resource(RoomUserRoutes, '/api/rooms/<string:room_id>/users/')
+    api.add_resource(RoomQuizRoutes, '/api/rooms/<string:room_id>/quizzes/')
     api.add_resource(QuizRoutes, '/api/quizzes/', '/api/quizzes/<string:quiz_id>')
     api.add_resource(TopicRoutes, '/api/topics/', '/api/topics/<string:topic_id>')
     api.add_resource(TopicQuizRoutes, '/api/topics/<string:topic_id>/quizzes/')
